# paddy-classification-docker

./: .gitignore  README.md  compose.yaml
config/: config.yaml
env/: Dockerfile  pyproject.toml
inputs/: data.csv
notebooks/: train_val_split.ipynb
src/: inference.py  sanity_test.py  train.py
src/dataset/: transformation.py
src/model/: loss.py  model.py  net.py  optimizer.py
src/model/optimizers/: ranger21.py  sam.py
src/pipeline/: experiment_tracker.py
src/prediction/: predictor.py
src/utils/: data_manager.py
