[tool.poetry]
name = "tree-classification"
version = "0.1.0"
description = ""
authors = ["MitsutakaDeep <mitsutaka_nakada@deepforest-tech.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.1.0", source = "torch_cu121"}
torchvision = {version = "0.16.0", source = "torch_cu121"}
pytorch-lightning = "1.9.0"
torchmetrics = "0.11.1"
numpy = "^1.26.3"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
scikit-learn = "^1.3.2"
timm = "^0.9.12"
hydra-core = "^1.3.2"
pillow = "^10.2.0"
mlflow = "^2.9.2"
wandb = "^0.16.2"
torchsampler = "^0.1.2"
ipykernel = "^6.28.0"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
