[tool.poetry]
name = "paddy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {version = "2.0.1", source = "torch_cu117"}
torchvision = {version = "0.15.2", source = "torch_cu117"}
torchaudio = {version = "2.0.2", source = "torch_cu117"}
pytorch-lightning = "1.9.0"
torchmetrics = "0.11.1"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
timm = "^0.9.10"
hydra-core = "^1.3.2"
pillow = "^10.1.0"
mlflow = "^2.8.0"
wandb = "^0.16.0"
ipykernel = "^6.26.0"
torchsampler = "^0.1.2"


[[tool.poetry.source]]
name = "torch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
